fix - failing integration tests - did this by added a few mocks, and a user to temporary persistence